// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal snapshots default modal matches snapshot 1`] = `
<Modal>
  <Portal
    containerInfo={
      <body>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 ffLOAg"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
      </body>
    }
  >
    <Modalstyles__Wrapper>
      <div
        className="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
      >
        <Modalstyles__ModalWrapper
          fluid={false}
          maxHeight={500}
          maxWidth={500}
          minHeight={100}
          minWidth={200}
        >
          <div
            className="Modalstyles__ModalWrapper-sc-5bf2l8-1 ffLOAg"
          >
            <CloseButton
              className={null}
              icon={null}
              onClick={[Function]}
            >
              <CloseButtonstyles__Button
                onClick={[Function]}
                role="button"
              >
                <button
                  className="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
                  onClick={[Function]}
                  role="button"
                >
                  x
                </button>
              </CloseButtonstyles__Button>
            </CloseButton>
          </div>
        </Modalstyles__ModalWrapper>
        <Overlay
          className={null}
          onClick={[Function]}
        >
          <Overlaystyles__OverlayWrapper
            onClick={[Function]}
          >
            <div
              className="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
              onClick={[Function]}
            />
          </Overlaystyles__OverlayWrapper>
        </Overlay>
      </div>
    </Modalstyles__Wrapper>
  </Portal>
</Modal>
`;

exports[`Modal snapshots fluid modal matches snapshot 1`] = `
<Modal
  fluid={true}
>
  <Portal
    containerInfo={
      <body>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 ffLOAg"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 caGlFr"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
      </body>
    }
  >
    <Modalstyles__Wrapper>
      <div
        className="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
      >
        <Modalstyles__ModalWrapper
          fluid={true}
          maxHeight={500}
          maxWidth={500}
          minHeight={100}
          minWidth={200}
        >
          <div
            className="Modalstyles__ModalWrapper-sc-5bf2l8-1 caGlFr"
          >
            <CloseButton
              className={null}
              icon={null}
              onClick={[Function]}
            >
              <CloseButtonstyles__Button
                onClick={[Function]}
                role="button"
              >
                <button
                  className="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
                  onClick={[Function]}
                  role="button"
                >
                  x
                </button>
              </CloseButtonstyles__Button>
            </CloseButton>
          </div>
        </Modalstyles__ModalWrapper>
        <Overlay
          className={null}
          onClick={[Function]}
        >
          <Overlaystyles__OverlayWrapper
            onClick={[Function]}
          >
            <div
              className="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
              onClick={[Function]}
            />
          </Overlaystyles__OverlayWrapper>
        </Overlay>
      </div>
    </Modalstyles__Wrapper>
  </Portal>
</Modal>
`;

exports[`Modal snapshots modal matches snapshot when custom styles are set 1`] = `
<Modal
  customClassNames={
    Object {
      "closeButton": "closeButtonClassName",
      "modal": "modalClassName",
      "overlay": "overlayClassName",
      "wrapper": "wrapperClassName",
    }
  }
>
  <Portal
    containerInfo={
      <body>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 ffLOAg"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 caGlFr"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 kVKwYK"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI wrapperClassName"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 ffLOAg modalClassName"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt closeButtonClassName"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR overlayClassName"
          />
        </div>
      </body>
    }
  >
    <Modalstyles__Wrapper
      className="wrapperClassName"
    >
      <div
        className="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI wrapperClassName"
      >
        <Modalstyles__ModalWrapper
          className="modalClassName"
          fluid={false}
          maxHeight={500}
          maxWidth={500}
          minHeight={100}
          minWidth={200}
        >
          <div
            className="Modalstyles__ModalWrapper-sc-5bf2l8-1 ffLOAg modalClassName"
          >
            <CloseButton
              className="closeButtonClassName"
              icon={null}
              onClick={[Function]}
            >
              <CloseButtonstyles__Button
                className="closeButtonClassName"
                onClick={[Function]}
                role="button"
              >
                <button
                  className="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt closeButtonClassName"
                  onClick={[Function]}
                  role="button"
                >
                  x
                </button>
              </CloseButtonstyles__Button>
            </CloseButton>
          </div>
        </Modalstyles__ModalWrapper>
        <Overlay
          className="overlayClassName"
          onClick={[Function]}
        >
          <Overlaystyles__OverlayWrapper
            className="overlayClassName"
            onClick={[Function]}
          >
            <div
              className="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR overlayClassName"
              onClick={[Function]}
            />
          </Overlaystyles__OverlayWrapper>
        </Overlay>
      </div>
    </Modalstyles__Wrapper>
  </Portal>
</Modal>
`;

exports[`Modal snapshots modal matches snapshot when maxHeight/minHeight/maxWidth/minWidth props are provided 1`] = `
<Modal
  maxHeight={100}
  maxWidth={120}
  minHeight={50}
  minWidth={60}
>
  <Portal
    containerInfo={
      <body>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 ffLOAg"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 caGlFr"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
        <div
          class="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
        >
          <div
            class="Modalstyles__ModalWrapper-sc-5bf2l8-1 kVKwYK"
          >
            <button
              class="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
          />
        </div>
      </body>
    }
  >
    <Modalstyles__Wrapper>
      <div
        className="Modalstyles__Wrapper-sc-5bf2l8-0 jIsDqI"
      >
        <Modalstyles__ModalWrapper
          fluid={false}
          maxHeight={100}
          maxWidth={120}
          minHeight={50}
          minWidth={60}
        >
          <div
            className="Modalstyles__ModalWrapper-sc-5bf2l8-1 kVKwYK"
          >
            <CloseButton
              className={null}
              icon={null}
              onClick={[Function]}
            >
              <CloseButtonstyles__Button
                onClick={[Function]}
                role="button"
              >
                <button
                  className="CloseButtonstyles__Button-sc-1sd1qj0-0 pzudt"
                  onClick={[Function]}
                  role="button"
                >
                  x
                </button>
              </CloseButtonstyles__Button>
            </CloseButton>
          </div>
        </Modalstyles__ModalWrapper>
        <Overlay
          className={null}
          onClick={[Function]}
        >
          <Overlaystyles__OverlayWrapper
            onClick={[Function]}
          >
            <div
              className="Overlaystyles__OverlayWrapper-sc-268q0n-0 giiUMR"
              onClick={[Function]}
            />
          </Overlaystyles__OverlayWrapper>
        </Overlay>
      </div>
    </Modalstyles__Wrapper>
  </Portal>
</Modal>
`;
